# resource-surveillance

./: .gitignore  CLI-help.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  RELEASE.md  e2e-test.db  init-env.fish  install.sh  niba.sql  out.sql  out.txt  surveilr-sbom.spdx.json
.github/workflows/: release.yml  rust.yml
src/: bootstrap.sql  capturable.rs  classify.rs  device.rs  format.rs  frontmatter.rs  fscontent.rs  fsresource.rs  fswalk.rs  helpers.rs  ingest.rs  keys.rs  main.rs  models_polygenix.rs  nbccontent.rs  persist.rs  resource.rs  resources.states.puml  rwalk.rs  shell.rs  sign.rs  subprocess.rs  uniform.rs
src/cli/: Cargo.toml
src/cli/src/: lib.rs
src/cmd/: Cargo.toml  admin.rs  capexec.rs  fswalk.rs  ingest.rs  mod.rs  notebooks.rs  rwalk.rs  shell.rs  sql_page.rs
src/cmd/src/: admin.rs  capexec.rs  ingest.rs  lib.rs  notebooks.rs  sql_page.rs
src/common/: Cargo.toml
src/common/src/: ingest.rs  lib.rs  persist.rs  resource.rs  sqlite_helpers.rs
src/resource/: Cargo.toml
src/resource/src/: lib.rs  resources.states.puml  shell.rs  uniform_resource.rs
src/resource_helpers/: Cargo.toml
src/resource_imap/: Cargo.toml
src/resource_imap/src/: default_imap_service.rs  elaboration.rs  lib.rs
src/resource_imap/src/msft/: auth_code.rs  client_credential.rs  device_code.rs  emails.rs  mod.rs
src/resource_serde/: Cargo.toml
src/resource_serde/src/: bootstrap.sql  cmd.rs  ingest.rs  lib.rs  models_polygenix.rs  persist.rs
src/resource_serde/src/cmd/: imap.rs  mod.rs  transform.rs
src/resource_serde/src/ingest/: files.rs  imap.rs  mod.rs  tasks.rs
src/resource_serde/src/ingest/imap/: elaboration.rs  mod.rs
src/resource_serde/src/transformers/: mod.rs
src/sea_orm_entities_auto/: code_notebook_cell.rs  code_notebook_kernel.rs  code_notebook_state.rs  mod.rs  prelude.rs  sqlpage_files.rs
src/service_management/: Cargo.toml  logger.rs  mod.rs  observability.rs
src/service_management/src/: lib.rs
src/surveilr_cli/: Cargo.toml
src/surveilr_cli/src/: admin.rs  capexec.rs  ingest.rs  lib.rs  notebooks.rs  sql_page.rs  udi_pgp.rs
src/surveilr_cli/src/service_management/: mod.rs
src/surveilr_static/: Cargo.toml
src/surveilr_static/src/: format.rs  ingest.rs  lib.rs  models_polygenix.rs  persist.rs  resource.rs
src/surveilr_ux_cli/: Cargo.toml
src/surveilr_ux_cli/src/: admin.rs  capexec.rs  ingest.rs  lib.rs  notebooks.rs  udi_pgp.rs
src/surveilr_ux_cli/src/service_management/: logger.rs  mod.rs
src/surveilr_ux_cli/src/udi/: mod.rs  pgp.rs
src/udi_pgp/: Cargo.toml  README.md
src/udi_pgp/src/: admin.sql  auth.rs  cli.rs  config.rs  error.rs  health.rs  lib.rs  metrics.rs  sql_supplier.rs  startup.rs
src/udi_pgp/src/config/: manager.rs  mod.rs  nickel.rs
src/udi_pgp/src/introspection/: error.rs  mod.rs
src/udi_pgp/src/introspection/sql_suppliers/: core_table.rs  logs_table.rs  mod.rs  suppliers_table.rs
src/udi_pgp/src/observability/: log_entry.rs  mod.rs
src/udi_pgp/src/parser/: columns.rs  mod.rs  stmt.rs  tables.rs
src/udi_pgp/src/processor/: mod.rs
src/udi_pgp/src/processor/query_handler/: extended.rs  mod.rs  simple.rs
src/udi_pgp/src/simulations/: mod.rs  response.rs
src/udi_pgp/src/simulations/responses/: pg_description.json  pg_settings.json  postgres_js.json
src/udi_pgp/src/sql_supplier/: admin.rs  mod.rs
src/udi_pgp/src/ssh/: key.rs  mod.rs  session.rs
src/udi_pgp/src/state/: database.rs  messages.rs  mod.rs
src/udi_pgp_imap/: Cargo.toml
src/udi_pgp_imap/src/: app_password.rs  lib.rs
src/udi_pgp_imap/src/msft/: auth_code.rs  device_code.rs  emails.rs  mod.rs
src/udi_pgp_osquery/: Cargo.toml
src/udi_pgp_osquery/src/: lib.rs  schema.rs
src/utils/: Cargo.toml  mod.rs  otel.rs
support/: anchor-tag-extract.sql  config-fragment-core.ncl.sql  config-fragment-supplier1.ncl.sql  config-fragment-supplier2.ncl.sql  config-full.ncl  config.ncl  regression-ingest-files.sql  test-e2e.http  test-e2e.sql
support/docs/: CLI-help.md  CONTRIBUTING.md  GPM.md  ULID.md  rclone-documentation.md  surveilr-code-notebooks.auto.puml  surveilr-code-notebooks.tbls.auto.yml  surveilr-code-notebooks.tbls.yml  surveilr-state.auto.puml  surveilr-state.tbls.auto.yml  surveilr-state.tbls.yml
support/docs/surveilr-code-notebooks-schema/: README.md  assurance_schema.md  code_notebook_cell.md  code_notebook_kernel.md  code_notebook_state.md  schema.json
support/docs/surveilr-state-schema/: README.md  behavior.md  device.md  fs_content_walk_session_stats.md  fs_content_walk_session_stats_latest.md  schema.json  sqlpage_files.md  uniform_resource.md  uniform_resource_transform.md  ur_ingest_resource_path_match_rule.md  ur_ingest_resource_path_rewrite_rule.md  ur_ingest_session.md  ur_ingest_session_fs_path.md  ur_ingest_session_fs_path_entry.md  ur_ingest_session_task.md  ur_ingest_session_task_entry.md  ur_walk_session.md  ur_walk_session_path.md  ur_walk_session_path_fs_entry.md
support/experiments/: serde-xml-rs-output.json  sql-set.rs  xml-to-json-xmltojson.rs  xml-to-json-xmltree.rs  xml-to-json.rs  xmltojson.json
support/experiments/imap/: css-selectors.rs  gmail-password.rs  html-to-json.rs  oauth.rs  test.html
support/quality-system/: surveilr-sbom.spdx.json
support/regression-tests/: ingest-imap.sql
support/sql-aide/: README.md  deps.ts  models.ts  notebooks.ts  polygenix.ts  sqlactl.ts  tbls.ts
support/tasks/typical/: README.md  cloud-cnquery.jsonl  cloud-evidence-collector.sh  cloud-steampipe.jsonl  device-compute.jsonl  device-containers.jsonl  device-elaboration.jsonl  device-evidence-collector.sh  device-memory.jsonl  device-security.jsonl  device-storage.jsonl  device-syslogs.jsonl
support/test-fixtures/: README.md  markdown-with-frontmatter.md
tests/: cli-e2e.rs  ingest.rs
