[package]
name = "surveilr"
version = "0.12.2"
edition = "2021"

# Before getting arbitrary crates check https://blessed.rs for opinionated list of "best" crates.
[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
bitflags = { version = "2.4.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive", "env"] }
clap-markdown = "0.1.3"
comfy-table = "7.1.0"
deno_task_shell = { version = "0.14.2", features = ["shell", "serialization"] }
glob = "0.3.1"
globset = "0.4.13"
globwalk = "0.8.1"
hostname = "0.3.1"
ignore = "0.4.20"
indoc = "2.0.4"
is_executable = "1.0.1"
lazy_static = "1.4.0"
os_pipe = { version = "1.1.4", optional = true }
pretty_assertions = "1.4.0"
regex = { version = "1.10.2", features = ["std"], default-features = false }
rusqlite = { version = "0.30.0", features = ["bundled", "functions"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
serde_rusqlite = "0.34.0"
serde_regex = "1.1.0"
serde_yaml = "0.9.27"
sha1 = "0.10.6"
subprocess = "0.2.9"
sysinfo = { version = "0.29.10", features = ["multithread", "rayon", "serde"] }
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
ulid = { version = "1.1.0", features = ["rand", "std", "serde", "uuid"] }
vfs = { version = "0.10.0", features = ["embedded-fs"] }
walkdir = "2.4.0"
