[package]
name = "cli_args"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opentelemetry.workspace = true
lazy_static.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
autometrics.workspace = true
serde_rusqlite.workspace = true
tracing.workspace = true
serde.workspace = true
utils.workspace = true