[package]
name = "resource_imap"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
mail-parser = { version = "0.9.2", features = ["serde_support", "full_encoding"] }
webpki-roots = "0.26.1"
warp = "0.3.3"
reqwest = { version = "0.11.16", default-features=false, features = ["json", "gzip", "blocking", "stream"] }
tracing.workspace = true
tokio.workspace = true
futures-util = "0.3.30"
indicatif.workspace = true
async-trait.workspace = true
tokio-rustls = "0.26.0"

[dependencies.async-imap]
version = "0.9.7"
default-features = false
features = ["runtime-tokio"]

[dependencies.graph-rs-sdk]
version = "1.1.4"
default-features = false
features = ["rustls-tls"]