[package]
name = "service_management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
opentelemetry_sdk.workspace = true
cli.workspace = true
tracing.workspace = true
tracing-subscriber = {version = "0.3.18", features = ["std", "fmt", "json", "env-filter"] }
opentelemetry.workspace = true
opentelemetry-otlp = { version = "0.14.0", features = ["tokio", "http", "reqwest-client", "reqwest-rustls", "http-proto", "tls", "logs"] }
