[package]
name = "surveilr_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "surveilr"

[[bin]]
name = "surveilr"
path = "src/bin/surveilr.rs"

[dependencies]
opentelemetry.workspace = true
lazy_static.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
autometrics.workspace = true
serde_rusqlite.workspace = true
tracing.workspace = true
resource.workspace = true
common.workspace = true
clap-markdown.workspace = true
globset.workspace = true
glob.workspace = true
serde_json.workspace = true
comfy-table.workspace = true
rusqlite.workspace = true
sqlpage = "0.17.1"
opentelemetry_sdk.workspace = true
resource_serde.workspace = true
tracing-subscriber = {version = "0.3.18", features = ["std", "fmt", "json", "env-filter"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tokio", "http", "reqwest-client", "reqwest-rustls", "http-proto", "tls", "logs"] }
serde.workspace = true
udi_pgp.workspace = true