[package]
name = "udi_pgp_imap"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
native-tls = "0.2"
imap = "2.4.1"
anyhow.workspace = true
mail-parser = { version = "0.9.2", features = ["serde_support", "full_encoding"] }