[package]
name = "udi_pgp_osquery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
async-trait = "0.1.77"
derive-new = "0.6.0"
futures = "0.3.30"
resource_serde.workspace = true
anyhow.workspace = true
sqlparser = "0.41.0"
clap.workspace = true
udi_pgp.workspace = true